...
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|center"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:srcCompat="@drawable/cam_icon" />-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/processing_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|center"
        app:backgroundTint="@color/processing_green"
        android:visibility="gone"
        app:srcCompat="@drawable/arrow_key" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/delete_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|start"
        app:backgroundTint="@color/delete_brown"
        android:visibility="gone"
        app:srcCompat="@drawable/delete" />

    <!--<Button-->
        <!--android:text="Draw Circuit"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="60dp"-->
        <!--android:id="@+id/drawCircuitButton"-->
        <!--android:layout_gravity="top|left"-->
        <!--app:layout_anchor="@+id/include"-->
        <!--app:layout_anchorGravity="center_vertical|right" />-->
...
