...
        android:id="@+id/saved_circuits_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        >
        <LinearLayout
            android:id="@+id/saved_circuits_scroll"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>

...
